package com.ab.iterator;

import java.util.Iterator;
import java.util.List;

/**
 * @author ab
 * @description
 * @date
 */
public class InfoCollegeIterator implements Iterator {
    List<Department> departmentList;
    /**
     * 索引
     */
    int index = -1;

    public InfoCollegeIterator(List<Department> departmentList) {
        this.departmentList = departmentList;
    }

    @Override
    public boolean hasNext() {
        if (index >= departmentList.size() - 1) {
            return false;
        } else {
            index += 1;
            return true;
        }
    }

    @Override
    public Object next() {
        return departmentList.get(index);
    }

}
